Update theming and shifts deadline Part of fixing https://jira.magfest.net/browse/MAGDEV-956.

--- a/magprime/static/theme/prereg_extra.css
+++ b/magprime/static/theme/prereg_extra.css
@@ -68,6 +68,6 @@ only screen and (min-resolution:2dppx) {
 }
 
 body {
-    background-color: #fdda2b;
-    background-image: url(../theme/tile-background.png);
+    background-color: #17181c;
+    /* background-image: url(../theme/tile-background.png); */
     }
